--- a/src/app/cat-images/cat-images.page.html
+++ b/src/app/cat-images/cat-images.page.html
@@ -1,18 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Cat Images</ion-title>
+  <ion-toolbar> <!-- Toolbar section at the top of the page -->
+    <ion-title>Cat Images</ion-title> <!-- Title displayed in the toolbar -->
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" *ngFor="let cat of cats">
-        <ion-card (click)="openCatDetails(cat)">
-          <img [src]="cat.image" [alt]="cat.breed" />
-          <ion-card-header>
-            <ion-card-title>{{ cat.breed }}</ion-card-title>
-            <ion-card-subtitle>{{ cat.country }}</ion-card-subtitle>
+  <ion-grid> <!-- Grid layout to organize the cat image cards -->
+    <ion-row> <!-- Row to contain columns for cat cards -->
+      <ion-col size="6" *ngFor="let cat of cats"> <!-- Column that takes up 50% of the row width, repeating for each cat in the 'cats' array -->
+        <ion-card (click)="openCatDetails(cat)"> <!-- Card component for each cat, with a click event to open cat details -->
+          <img [src]="cat.image" [alt]="cat.breed" /> <!-- Display the cat's image; the src and alt attributes are dynamically bound to the cat's data -->
+          <ion-card-header> <!-- Header section of the card -->
+            <ion-card-title>{{ cat.breed }}</ion-card-title> <!-- Display the breed of the cat as the card title -->
+            <ion-card-subtitle>{{ cat.country }}</ion-card-subtitle> <!-- Display the country of the cat as the card subtitle -->
           </ion-card-header>
         </ion-card>
       </ion-col>
